--- a/form.html
+++ b/form.html
@@ -23,7 +23,7 @@
             </p>
             <p>
                 <label for="Digital">
-                    <input type="radio" name="Subject" id="Digital">Digital Electronics
+                    <input type="radio" name="Subject" id="Digital">Digital Electronic
                 </label>
             </p>
             <p>
